# dwd-mcp-server

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/dwd_mcp_server/: __init__.py  brightsky_client.py  cli.py  geocoding.py  german_cities.py  server.py
tests/: __init__.py  test_brightsky_client.py  test_geocoding.py  test_server.py
